force-app/main/default/objects/CCR_QureReplacementChannels__mdt/CCR_QureReplacementChannels__mdt.object-meta.xml
<CustomObject>
    <description>This Custom Metadata is to store the data related to Replacement channels for the Case Resolution field and QURE History Replacements channel fields.</description>
    <label>CCR Qure Replacement Channel</label>
    <pluralLabel>CCR Qure Replacement Channels</pluralLabel>
</CustomObject>