force-app/main/default/objects/CCR_QureReplacementChannels__mdt/fields/CCR_CaseResolution__c.field-meta.xml
<CustomField>
    <fullName>CCR_CaseResolution__c</fullName>
    <label>Case Resolution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Replacement by courier</fullName>
                <default>true</default>
                <label>Replacement by courier</label>
            </value>
            <value>
                <fullName>Replacement face to face</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>