force-app/main/default/objects/CCR_QureReplacementChannels__mdt/fields/CCR_Country__c.field-meta.xml
<CustomField>
    <fullName>CCR_Country__c</fullName>
    <description>This field is to store the value of Country</description>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>