force-app/main/default/objects/CCR_QureReplacementChannels__mdt/fields/CCR_QureHistoryReplacementChannel__c.field-meta.xml
<CustomField>
    <fullName>CCR_QureHistoryReplacementChannel__c</fullName>
    <description>This field is to store the Replacement channel value for Qure History Replacement Channel field</description>
    <label>Qure History Replacement Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CourierDelivery</fullName>
                <default>true</default>
                <label>Courier Delivery</label>
            </value>
            <value>
                <fullName>CVSStore</fullName>
                <label>CVS Store</label>
            </value>
            <value>
                <fullName>FaceToFace</fullName>
                <label>Face To Face</label>
            </value>
            <value>
                <fullName>Corner_Shop</fullName>
                <label>Corner Shop</label>
            </value>
            <value>
                <fullName>Local_Market</fullName>
                <label>Local Market</label>
            </value>
            <value>
                <fullName>iSWAP</fullName>
            </value>
            <value>
                <fullName>Iqos_coach</fullName>
                <label>Iqos coach</label>
            </value>
            <value>
                <fullName>IQOS_Flagship_Store</fullName>
                <label>IQOS Flagship Store</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>